<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customers_items_main_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1F0FF">
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="427dp"
            android:layout_height="80dp"
            android:background="#0AA0CE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="82dp"
            android:layout_height="84dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <ImageButton
            android:id="@+id/buttonA"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:background="@null"
            android:contentDescription="@string/acc_user_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/user"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#E1E3FB" />

        <ImageButton
            android:id="@+id/button_Add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:contentDescription="@string/add_item_user_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/add"
            app:layout_constraintEnd_toStartOf="@+id/buttonA"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#C8CCFB" />

        <Button
            android:id="@+id/orders_btn"
            android:layout_width="112dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#7C88F6"
            android:fontFamily="@font/cormorant_infant_light"
            android:paddingHorizontal="16dp"
            android:text="Замовлення"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_Add" />

        <ImageButton
            android:id="@+id/categoryButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="60dp"
            android:background="@null"
            android:contentDescription="@string/category_button_description"
            android:paddingHorizontal="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/category"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#E1E3FB" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:headerLayout="@layout/drawer_header"
        app:menu="@layout/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>