<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F0FF"
    tools:context="com.example.flowersshop.CustomerAccActivity">

    <TextView
        android:id="@+id/profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/cormorant_sc_light"
        android:text="- Ваш профіль - "
        android:textColor="#001180"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAcc_b" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:fontFamily="@font/cormorant_infant_light"
        android:hint="Ім'я"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_label" />

    <EditText
        android:id="@+id/adress_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:fontFamily="@font/cormorant_infant_light"
        android:hint="Адреса"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <EditText
        android:id="@+id/phone_lab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:fontFamily="@font/cormorant_infant_light"
        android:hint="Номер телефону"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_field" />

    <ImageButton
        android:id="@+id/change_b"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:contentDescription="@string/accept_changes_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/tickmark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_lab"
        app:tint="#24399E" />

    <Button
        android:id="@+id/CustomerItems_b"
        android:layout_width="291dp"
        android:layout_height="78dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#4F65DC"
        android:fontFamily="@font/cormorant_sc_light"
        android:text="Ваші товари"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_b" />

    <Button
        android:id="@+id/your_orders_button"
        android:layout_width="291dp"
        android:layout_height="78dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#4E64DA"
        android:fontFamily="@font/cormorant_sc_light"
        android:text="Ваші замовлення"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomerItems_b" />

    <ImageButton
        android:id="@+id/exitAcc_b"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/logout_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#C12C2C" />

    <ImageButton
        android:id="@+id/deleteAcc_b"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/delete_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toStartOf="@+id/exitAcc_b"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#900707" />
    <ImageButton
        android:id="@+id/back_b_confirmed"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:contentDescription="@string/logout_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/previous"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#2ecc71" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_c_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAcc_b" />

</androidx.constraintlayout.widget.ConstraintLayout>